--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,71 @@
-h1 {
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  color: aliceblue;
+}
+
+.main-nav {
+  height: 48px;
+  width: 100%;
+  position: fixed;
+  background-color: #e8e8e8;
+  display: flex;
+  justify-content: flex-end;
+  z-index: 10;
+  min-width: 1430px;
+}
+
+.main-nav > a {
+  text-decoration: none;
+  position: absolute;
+  left: 40px;
+  top: 0;
+  color: #777777;
+  text-align: center;
+  line-height: 48px;
+  text-decoration: none;
+}
+
+.main-nav li {
+  list-style-type: none;
+  display: flex;
+  line-height: 48px;
+  width: auto;
+}
+
+.main-nav li a {
+  display: flex;
+  text-decoration: none;
+  color: #777777;
+  padding: 0 39px;
+  font-size: 18px;
+}
+
+.main-nav li a:hover {
+  text-decoration: none;
+  background-color: #3f3f3f;
+  color: aliceblue;
+}
+
+.content {
+  padding: 220px 0 80px 0;
+  text-align: center;
+  background-color: #3f3f3f;
+  /* background-position: 50% 180px; */
+  background-size: 800px;
+  /* background-repeat: repeat-x; */
+}
+.content h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  color: whitesmoke;
+}
+.todolist a {
   color: red;
-  font-size: 50;
 }
-
-a:hover{
-  font-size: large;
-}
-
